Updates css to fix some layout issues
Edit/Delete buttons now align on user show page for admin
Changed pagination background so it wouldn't be visible when pagination is not
needed

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -113,6 +113,10 @@ h2 {
   margin-left: 20px;
 }
 
+#show-btn-delete {
+  margin-left: 1.80em;
+}
+
 .btn-primary {
   background-color: #6f4fff;
   border: none;
@@ -177,7 +181,7 @@ h2 {
 
 // Pagination
 .apple_pagination {
-  background: #1f292e;
+  background: #1b2327;
   border: none;
   text-align: center;
   padding: 1em;
